--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h1>Dorjee's Website</h1>
 <p>This is Dorjee Website for Comp Science.</p>
+<a href="https://www.linkedin.com/in/dorjee-g-lama-430897262">To contact me, press this link.</a>
 <img src="https://static.clideo.com/files/content/1012/twitter-meme-maker-1.png"></img>
 </body>
 </html>
